# hni

./: .clinerules  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  commands.md  dprint.json  future_plan.md  index.js  install.ps1  install.sh  jsr.json  justfile  memory.md  ni_functionality.md  nirs.rb  nirs.rb.template  nirs.toml  package-lock.json  package.json  plan.md  turborepotui.md
.cline/: task-title.md
.github/workflows/: benchmark.yml  brew.yml  ci.yml  release.yml  test.yml
.specstory/history/: analysis-of-ni-command-implementation-in-rust.md  code-refactoring-for-improved-structure.md  creating-a-lightweight-http-server-in-node-js.md  creating-unit-tests-for-parse-rs-functions.md  fixing-and-running-tests.md  fixing-build-errors.md  fixing-cargo-build-errors-1.md  fixing-cargo-build-errors-2.md  fixing-cargo-build-issues-in-rust.md  fixing-cargo-test-command-issues.md  fixing-deno-tests-and-command-documentation.md  fixing-empty-version-in-release-configuration.md  fixing-failing-test-cases-in-rust.md  fixing-namespace-conflict-in-rust.md  fixing-rust-cargo-build-errors.md  fixing-rust-test-with-cargo.md  fixing-rust-vector-initialization-warning.md  fixing-syntax-errors-in-detect-rs.md  fixing-test-failures-and-environment-setup.md  flaky-test-investigation-in-rust.md  github-action-for-building-and-releasing.md  github-cli-authentication-for-binary-downloads.md  github-release-asset-name-conflict.md  improving-code-for-production-readiness.md  improving-rust-code-for-command-execution.md  improving-rust-code-for-determinism-and-idiomatic-practices.md  improving-test-consistency-and-reliability.md  merging-pnpm6-and-pnpm-implementations.md  package-manager-command-verification.md  randomize-test-files-for-conflict-prevention.md  (+14 more)
benchmark/: HISTORY.md  LATEST.md  README.md  profile.sh  run.mjs  run.sh
benchmarks/: README.md  run.mjs
docs/: fast-compat.md  native-compat.md
jsr/: hni.ts  mod.ts  na.ts  nci.ts  ni.ts  nlx.ts  np.ts  nr.ts  ns.ts  nu.ts  nun.ts  shared.ts
memory_bank/: activeContext.md  config.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: prepare-npm-platform-packages.mjs  render-benchmark-comment.mjs  test-modes.mjs  update_homebrew_formula.sh
src/: bun.rs  command.rs  command_executor.rs  commands.rs  config.rs  deno.rs  detect.rs  lib.rs  logger.rs  main.rs  npm.rs  parse.rs  pnpm.rs  pnpm6.rs  runner.rs  tests.rs  update_checker.rs  utils.rs  yarn.rs  yarn_berry.rs
src/app/: cli.rs  (+10 more)
tests/: batch_commands.rs  bun_tests.rs  cli_contract.rs  common.rs  config_detect.rs  deno_tests.rs  detect_parity.rs  detect_tests.rs  dispatch_multicall.rs  edge_cases.rs  error_contract.rs  fixture_modes.rs  helpers.rs  hni_meta.rs  init_contract.rs  mod.rs  native_deno_fast.rs  native_execution.rs  native_package_managers.rs  native_regression.rs  node_shim.rs  np_tests.rs  npm_tests.rs  nr_interactive_behavior.rs  ns_tests.rs  parity_against_antfu.rs  passthrough.rs  pnpm6_tests.rs  pnpm_tests.rs  resolve_matrix.rs  support.rs  support_contract.rs  yarn_berry_tests.rs  yarn_tests.rs
(+119 files in other folders)
