[package]
name = "hni"
version = "0.0.1"
authors = ["Spark <helllo@kamran.sh>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
keywords = ["package-manager", "npm", "yarn", "pnpm", "cli"]
license = "MIT"
repository = "https://github.com/happytoolin/hni"
description = "ni-compatible package manager command router with node shim"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
dirs = "6.0"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0"

[dev-dependencies]
tempfile = "3.26"
