[package]
name = "hni"
version = "0.0.1-alpha-3"
authors = ["Spark <helllo@kamran.sh>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
keywords = ["package-manager", "npm", "yarn", "pnpm", "cli"]
license = "GPL-3.0-only"
repository = "https://github.com/happytoolin/hni"
description = "ni-compatible package manager command router with node shim"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["std"] }
clap_complete = "4.5.66"
confy = "2.0.0"
configparser = "3.1.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
thiserror = "2.0.17"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.26.0"
