[package]
name = "hni"
version = "0.0.2"
authors = ["Spark <helllo@kamran.sh>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
keywords = ["package-manager", "npm", "yarn", "pnpm", "cli"]
license = "GPL-3.0-only"
repository = "https://github.com/happytoolin/hni"
description = "ni-compatible package manager command router with node shim"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["std"] }
clap_complete = "4.6.0"
confy = "2.0.0"
configparser = "3.1.0"
deno_task_shell = "0.29.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
indexmap = { version = "2.12.0", features = ["serde"] }
jsonc-parser = { version = "0.32.1", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "process", "rt", "sync", "time"] }
which = "8.0.2"

[dev-dependencies]
tempfile = "3.27.0"
